--- a/index.html
+++ b/index.html
@@ -36,35 +36,51 @@
 
 </head>
 
-<body class="font-manrope">
-  <nav class="my-12">
-    <div class="container mx-auto flex justify-between items-center px-5 lg:px-10">
-      <div class="lg:hidden">
-        <a href="#"><i class="fa-solid fa-bars"></i></a>
+<body class="font-manrope mx-5 md:mx-20 lg:mx-32">
+
+  <section class="my-7 md:my-9 lg:my-12">
+    <div class="navbar bg-base-100">
+      <div class="navbar-start">
+        <div class="dropdown lg:hidden">
+          <div tabindex="0" role="button" class="btn btn-ghost btn-circle">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+              stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h7" />
+            </svg>
+          </div>
+          <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+            <li><a href="#"><span class="text-[#FF4240]">Home</span></a></li>
+            <li><a>About</a></li>
+            <li><a>pages</a></li>
+            <li><a>Blog</a></li>
+            <li><a>contact</a></li>
+          </ul>
+        </div>
+        <div>
+          <h3 class="font-extrabold text-2xl lg:text-4xl">Hockey<span class="text-[#FF4240]">’</span>s</h3>
+        </div>
       </div>
-      <div>
-        <h3 class="font-extrabold text-4xl">Hockey<span class="text-[#FF4240]">’</span>s</h3>
-      </div>
-      <div id="menu" class="space-x-5 hidden lg:flex">
+      <div class="navbar-center space-x-5 hidden lg:flex">
         <a href="#"><span class="text-[#FF4240]">Home</span></a>
         <a href="#">About</a>
         <a href="#">pages</a>
         <a href="#">Blog</a>
         <a href="#">contact</a>
       </div>
-
-
-      <div class="lg:flex justify-center items-center space-x-5 ">
-        <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
-        <a href="#"><button class="common-btn">Get Ticket</button></a>
+      <div class="navbar-end">
+        <div class="lg:flex justify-center items-center space-x-3 ">
+          <a href="#"><i class="hidden lg:inline-block fa-solid fa-magnifying-glass"></i></a>
+          <a href="#"><button class="hidden lg:inline-block common-btn">Get Ticket</button></a>
+          <a href="#"><button class="common-btn-mobile lg:hidden">Get Ticket</button></a>
+        </div>
       </div>
     </div>
-  </nav>
+  </section>
 
   <!-- banner section -->
   <section class="container mx-auto">
 
-    <div class="carousel w-full m-4">
+    <div class="carousel w-full">
       <div id="slide1" class="carousel-item relative w-full">
         <img src="/images/1.png" class="w-full" />
         <div
@@ -99,47 +115,8 @@
       </div>
     </div>
   </section>
-  <br><br><br>
-  <section>
-    <div class="navbar bg-base-100">
-      <div class="navbar-start">
-        <div class="dropdown">
-          <div tabindex="0" role="button" class="btn btn-ghost btn-circle">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
-              stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h7" />
-            </svg>
-          </div>
-          <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
-            <li><a>Homepage</a></li>
-            <li><a>Portfolio</a></li>
-            <li><a>About</a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="navbar-center">
-        <a class="btn btn-ghost text-xl">daisyUI</a>
-      </div>
-      <div class="navbar-end">
-        <button class="btn btn-ghost btn-circle">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-              d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
-          </svg>
-        </button>
-        <button class="btn btn-ghost btn-circle">
-          <div class="indicator">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
-              stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" />
-            </svg>
-            <span class="badge badge-xs badge-primary indicator-item"></span>
-          </div>
-        </button>
-      </div>
-    </div>
-  </section>
+  <br>
+
 
 </body>
 
