--- a/index.html
+++ b/index.html
@@ -202,8 +202,7 @@
           </div>
         </div>
           <!-- image 03 -->
-        <div
-          class="bg-[url('/images/4.png')] lg:col-span-2 bg-cover rounded-xl lg:rounded-2xl h-[15.25rem] lg:h-[28.125rem] bg-center flex flex-col items-start justify-center relative ">
+        <div class="bg-[url('/images/4.png')] lg:col-span-2 bg-cover rounded-xl lg:rounded-2xl h-[15.25rem] lg:h-[28.125rem] bg-center flex flex-col items-start justify-center relative ">
           <div class="pl-6 lg:pl-0 lg:absolute lg:left-10 lg:bottom-10">
 
             <h3 class="text-white font-extrabold text-xl lg:text-2xl mb-3 lg:mb-4">Professional Program</h3>
@@ -221,8 +220,25 @@
 
       </div>
     </div>
+  </section>
+
+  <!-- section 03 Our new product-->
+  <section class="container mt-14 md:mt-20 lg:mt-24 w-10/12 mx-auto">
+    <div>
+      <div class="flex flex-col gap-4 md:gap-5 lg:gap-6 justify-center items-center text-center border-y border-dashed border-[#13131833] py-6 lg:py-8">
+        <h3 class="text-xl lg:text-4xl font-extrabold">Our New Products</h3>
+        <p class="font-medium opacity-80 text-sm lg:text-base px-8 lg:px-60">There are some of our brand new products in given bellow. You can buy these goods easily in here. we provides delivery service too..</p>
+      </div>
+      <!-- cards -->
+
+
+    </div>
+
+
+
 
   </section>
+
 
 
 </body>
