--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       <!-- content -->
       <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 mt-6 md:mt-9 lg:mt-12">
             <!-- image 1 -->
-        <div class="bg-[url('/images/2.png')] bg-cover rounded-xl lg:rounded-2xl h-[15.25rem] lg:h-[21.125rem] bg-center flex flex-col items-start justify-center relative ">
+        <div class="bg-[url('../images/2.png')] bg-cover rounded-xl lg:rounded-2xl h-[15.25rem] lg:h-[21.125rem] bg-center flex flex-col items-start justify-center relative ">
           <div class="pl-6 lg:pl-0 lg:absolute lg:left-10 lg:bottom-10">
 
             <h3 class="text-white font-extrabold text-xl lg:text-2xl mb-3 lg:mb-4">Junior Program</h3>
@@ -186,7 +186,7 @@
           </div>
         </div>
           <!-- image 02 -->
-        <div class="bg-[url('/images/3.png')] bg-cover rounded-xl lg:rounded-2xl h-[15.25rem] lg:h-[21.125rem] bg-center flex flex-col items-start justify-center relative ">
+        <div class="bg-[url('../images/3.png')] bg-cover rounded-xl lg:rounded-2xl h-[15.25rem] lg:h-[21.125rem] bg-center flex flex-col items-start justify-center relative ">
           <div class="pl-6 lg:pl-0 lg:absolute lg:left-10 lg:bottom-10">
 
             <h3 class="text-white font-extrabold text-xl lg:text-2xl mb-3 lg:mb-4">Teenager Program</h3>
@@ -202,7 +202,7 @@
           </div>
         </div>
           <!-- image 03 -->
-        <div class="bg-[url('/images/4.png')] lg:col-span-2 bg-cover rounded-xl lg:rounded-2xl h-[15.25rem] lg:h-[28.125rem] bg-center flex flex-col items-start justify-center relative ">
+        <div class="bg-[url('../images/4.png')] lg:col-span-2 bg-cover rounded-xl lg:rounded-2xl h-[15.25rem] lg:h-[28.125rem] bg-center flex flex-col items-start justify-center relative ">
           <div class="pl-6 lg:pl-0 lg:absolute lg:left-10 lg:bottom-10">
 
             <h3 class="text-white font-extrabold text-xl lg:text-2xl mb-3 lg:mb-4">Professional Program</h3>
