--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Assignment-3</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="./style.css">
 
   <!-- daisyUI -->
   <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
@@ -85,7 +85,7 @@
 
     <div class="carousel w-full">
       <div id="slide1" class="carousel-item relative w-full">
-        <img src="/images/1.png" class="w-full" />
+        <img src="./images/1.png" class="w-full" />
         <div
           class="absolute flex left-[calc(50%-58px)] top-[80%] gap-5 transform -translate-y-1/2 lg:left-10 lg:top-[88%]">
           <a href="#slide4" class="btn btn-circle bg-black text-white border-none">❮</a>
@@ -170,7 +170,7 @@
       <!-- content -->
       <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 mt-6 md:mt-9 lg:mt-12">
             <!-- image 1 -->
-        <div class="bg-[url('../images/2.png')] bg-cover rounded-xl lg:rounded-2xl h-[15.25rem] lg:h-[21.125rem] bg-center flex flex-col items-start justify-center relative ">
+        <div class="bg-[url('/images/2.png')] bg-cover rounded-xl lg:rounded-2xl h-[15.25rem] lg:h-[21.125rem] bg-center flex flex-col items-start justify-center relative ">
           <div class="pl-6 lg:pl-0 lg:absolute lg:left-10 lg:bottom-10">
 
             <h3 class="text-white font-extrabold text-xl lg:text-2xl mb-3 lg:mb-4">Junior Program</h3>
@@ -186,7 +186,7 @@
           </div>
         </div>
           <!-- image 02 -->
-        <div class="bg-[url('../images/3.png')] bg-cover rounded-xl lg:rounded-2xl h-[15.25rem] lg:h-[21.125rem] bg-center flex flex-col items-start justify-center relative ">
+        <div class="bg-[url('/images/3.png')] bg-cover rounded-xl lg:rounded-2xl h-[15.25rem] lg:h-[21.125rem] bg-center flex flex-col items-start justify-center relative ">
           <div class="pl-6 lg:pl-0 lg:absolute lg:left-10 lg:bottom-10">
 
             <h3 class="text-white font-extrabold text-xl lg:text-2xl mb-3 lg:mb-4">Teenager Program</h3>
@@ -202,7 +202,7 @@
           </div>
         </div>
           <!-- image 03 -->
-        <div class="bg-[url('../images/4.png')] lg:col-span-2 bg-cover rounded-xl lg:rounded-2xl h-[15.25rem] lg:h-[28.125rem] bg-center flex flex-col items-start justify-center relative ">
+        <div class="bg-[url('/images/4.png')] lg:col-span-2 bg-cover rounded-xl lg:rounded-2xl h-[15.25rem] lg:h-[28.125rem] bg-center flex flex-col items-start justify-center relative ">
           <div class="pl-6 lg:pl-0 lg:absolute lg:left-10 lg:bottom-10">
 
             <h3 class="text-white font-extrabold text-xl lg:text-2xl mb-3 lg:mb-4">Professional Program</h3>
@@ -230,7 +230,212 @@
         <p class="font-medium opacity-80 text-sm lg:text-base px-8 lg:px-60">There are some of our brand new products in given bellow. You can buy these goods easily in here. we provides delivery service too..</p>
       </div>
       <!-- cards -->
+      <div class="grid grid-cols-1 lg:grid-cols-2 gap-5 mt-8 lg:mt-12">
+          <!-- card 01 -->
+        <div class="shadow-xl flex flex-col lg:flex-row gap-5 p-6 rounded-2xl">
+          <figure class="w-full lg:w-5/12 flex justify-center items-center ">
+            <img src="/images/5.png" alt="jackets" class="rounded-xl w-full lg:w-9/12" />
+          </figure>
+          <div class="w-full lg:w-7/12 flex flex-col items-start space-y-3">
+            <!-- card icon -->
+            <div class="flex flex-row items-center justify-center space-x-4">
+              <div class="flex items-center justify-center space-x-2">
+                <i class="fa-solid fa-star text-amber-400"></i> 
+                <p>5.0</p>
+              </div>
+              <div class="flex items-center justify-center space-x-2">
+                <i class="fa-regular fa-eye"></i>
+                <p>20</p>
+              </div>
+              <div class="flex items-center justify-center space-x-2">
+                <i class="fa-regular fa-heart"></i>
+                <p>200</p>
+              </div>
+            </div>
+            <!-- card content -->
+            <h2 class="card-title text-xl font-extrabold">World Cup Jacket Football</h2>
+            <p class="font-medium opacity-90 ">It is a beautiful jackets of Bangladesh Football Team </p>
+            <div class="card-actions flex flex-col lg:flex-row gap-5">
+              <p class="text-[#FF4240] font-bold">Price - $30.00</p>
+              <div class="flex items-center space-x-2">
+                <i class="fa-solid fa-truck-fast opacity-60"></i>
+                <p class="font-medium opacity-80">Delivery Fee : $5.00</p>
+              </div>
+            </div>
+          </div>
+        </div>
 
+        <!-- card 02 -->
+        <div class="bg-base-100 shadow-xl flex flex-col lg:flex-row gap-5 p-6 rounded-2xl">
+          <figure class="">
+            <img src="/images/6.png" alt="jackets" class="rounded-xl" />
+          </figure>
+          <div class="flex flex-col items-start space-y-3">
+            <!-- card icon -->
+            <div class="flex flex-row items-center justify-center space-x-4">
+              <div class="flex items-center justify-center space-x-2">
+                <i class="fa-solid fa-star text-amber-400"></i> 
+                <p>5.0</p>
+              </div>
+              <div class="flex items-center justify-center space-x-2">
+                <i class="fa-regular fa-eye"></i>
+                <p>20</p>
+              </div>
+              <div class="flex items-center justify-center space-x-2">
+                <i class="fa-regular fa-heart"></i>
+                <p>200</p>
+              </div>
+            </div>
+            <!-- card content -->
+            <h2 class="card-title text-xl font-extrabold">World Cup Flag Football</h2>
+            <p class="font-medium opacity-90 ">This flag is made by Garmany for 2020 world cup</p>
+            <div class="card-actions flex flex-col lg:flex-row gap-5">
+              <p class="text-[#FF4240] font-bold">Price - $25.00</p>
+              <div class="flex items-center space-x-2">
+                <i class="fa-solid fa-truck-fast opacity-60"></i>
+                <p class="font-medium opacity-80">Delivery Fee : Free</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- card 03 -->
+        <div class="bg-base-100 shadow-xl flex flex-col lg:flex-row gap-5 p-6 rounded-2xl">
+          <figure class="">
+            <img src="/images/7.png" alt="jackets" class="rounded-xl" />
+          </figure>
+          <div class="flex flex-col items-start space-y-3">
+            <!-- card icon -->
+            <div class="flex flex-row items-center justify-center space-x-4">
+              <div class="flex items-center justify-center space-x-2">
+                <i class="fa-solid fa-star text-amber-400"></i> 
+                <p>5.0</p>
+              </div>
+              <div class="flex items-center justify-center space-x-2">
+                <i class="fa-regular fa-eye"></i>
+                <p>20</p>
+              </div>
+              <div class="flex items-center justify-center space-x-2">
+                <i class="fa-regular fa-heart"></i>
+                <p>200</p>
+              </div>
+            </div>
+            <!-- card content -->
+            <h2 class="card-title text-xl font-extrabold">Cap For Hockeys</h2>
+            <p class="font-medium opacity-90 ">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+            <div class="card-actions flex flex-col lg:flex-row gap-5">
+              <p class="text-[#FF4240] font-bold">Price - $10.00</p>
+              <div class="flex items-center space-x-2">
+                <i class="fa-solid fa-truck-fast opacity-60"></i>
+                <p class="font-medium opacity-80">Delivery Fee : Free</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- card 04 -->
+        <div class="bg-base-100 shadow-xl flex flex-col lg:flex-row gap-5 p-6 rounded-2xl">
+          <figure class="">
+            <img src="/images/8.png" alt="jackets" class="rounded-xl" />
+          </figure>
+          <div class="flex flex-col items-start space-y-3">
+            <!-- card icon -->
+            <div class="flex flex-row items-center justify-center space-x-4">
+              <div class="flex items-center justify-center space-x-2">
+                <i class="fa-solid fa-star text-amber-400"></i> 
+                <p>5.0</p>
+              </div>
+              <div class="flex items-center justify-center space-x-2">
+                <i class="fa-regular fa-eye"></i>
+                <p>20</p>
+              </div>
+              <div class="flex items-center justify-center space-x-2">
+                <i class="fa-regular fa-heart"></i>
+                <p>200</p>
+              </div>
+            </div>
+            <!-- card content -->
+            <h2 class="card-title text-xl font-extrabold">World Cup Jersey Football</h2>
+            <p class="font-medium opacity-90 ">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+            <div class="card-actions flex flex-col lg:flex-row gap-5">
+              <p class="text-[#FF4240] font-bold">Price - $35.00</p>
+              <div class="flex items-center space-x-2">
+                <i class="fa-solid fa-truck-fast opacity-60"></i>
+                <p class="font-medium opacity-80">Delivery Fee : $5.00</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- card 05 -->
+        <div class="bg-base-100 shadow-xl flex flex-col lg:flex-row gap-5 p-6 rounded-2xl">
+          <figure class="">
+            <img src="/images/9.png" alt="jackets" class="rounded-xl" />
+          </figure>
+          <div class="flex flex-col items-start space-y-3">
+            <!-- card icon -->
+            <div class="flex flex-row items-center justify-center space-x-4">
+              <div class="flex items-center justify-center space-x-2">
+                <i class="fa-solid fa-star text-amber-400"></i> 
+                <p>5.0</p>
+              </div>
+              <div class="flex items-center justify-center space-x-2">
+                <i class="fa-regular fa-eye"></i>
+                <p>20</p>
+              </div>
+              <div class="flex items-center justify-center space-x-2">
+                <i class="fa-regular fa-heart"></i>
+                <p>200</p>
+              </div>
+            </div>
+            <!-- card content -->
+            <h2 class="card-title text-xl font-extrabold">Hamlet For Hockey</h2>
+            <p class="font-medium opacity-90 ">This is very premium quality hamlet, </p>
+            <div class="card-actions flex flex-col lg:flex-row gap-5">
+              <p class="text-[#FF4240] font-bold">Price - $28.00</p>
+              <div class="flex items-center space-x-2">
+                <i class="fa-solid fa-truck-fast opacity-60"></i>
+                <p class="font-medium opacity-80">Delivery Fee : Free</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- card 06 -->
+        <div class="bg-base-100 shadow-xl flex flex-col lg:flex-row gap-5 p-6 rounded-2xl">
+          <figure class="">
+            <img src="/images/10.png" alt="jackets" class="rounded-xl" />
+          </figure>
+          <div class="flex flex-col items-start space-y-3">
+            <!-- card icon -->
+            <div class="flex flex-row items-center justify-center space-x-4">
+              <div class="flex items-center justify-center space-x-2">
+                <i class="fa-solid fa-star text-amber-400"></i> 
+                <p>5.0</p>
+              </div>
+              <div class="flex items-center justify-center space-x-2">
+                <i class="fa-regular fa-eye"></i>
+                <p>20</p>
+              </div>
+              <div class="flex items-center justify-center space-x-2">
+                <i class="fa-regular fa-heart"></i>
+                <p>200</p>
+              </div>
+            </div>
+            <!-- card content -->
+            <h2 class="card-title text-xl font-extrabold">World Cup Flags Football</h2>
+            <p class="font-medium opacity-90 ">This is very Gorgeous and beautiful flag  </p>
+            <div class="card-actions flex flex-col lg:flex-row gap-5">
+              <p class="text-[#FF4240] font-bold">Price - $15.00</p>
+              <div class="flex items-center space-x-2">
+                <i class="fa-solid fa-truck-fast opacity-60"></i>
+                <p class="font-medium opacity-80">Delivery Fee : $2.00</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
 
     </div>
 
