--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <!-- font awesome -->
   <script src="https://kit.fontawesome.com/808a676d10.js" crossorigin="anonymous"></script>
 
-  <!-- style css -->
+  
 
 
 
@@ -93,7 +93,7 @@
         </div>
       </div>
       <div id="slide2" class="carousel-item relative w-full">
-        <img src="/images/1.png" class="w-full" />
+        <img src="./images/1.png" class="w-full" />
         <div
           class="absolute flex left-[calc(50%-58px)] top-[80%] gap-5 transform -translate-y-1/2 lg:left-10 lg:top-[88%]">
           <a href="#slide1" class="btn btn-circle bg-black text-white border-none">❮</a>
@@ -101,7 +101,7 @@
         </div>
       </div>
       <div id="slide3" class="carousel-item relative w-full">
-        <img src="/images/1.png" class="w-full" />
+        <img src="./images/1.png" class="w-full" />
         <div
           class="absolute flex left-[calc(50%-58px)] top-[80%] gap-5 transform -translate-y-1/2 lg:left-10 lg:top-[88%]">
           <a href="#slide2" class="btn btn-circle bg-black text-white border-none">❮</a>
@@ -109,7 +109,7 @@
         </div>
       </div>
       <div id="slide4" class="carousel-item relative w-full">
-        <img src="/images/1.png" class="w-full" />
+        <img src="./images/1.png" class="w-full" />
         <div
           class="absolute flex left-[calc(50%-58px)] top-[80%] gap-5 transform -translate-y-1/2 lg:left-10 lg:top-[88%]">
           <a href="#slide3" class="btn btn-circle bg-black text-white border-none">❮</a>
@@ -170,7 +170,7 @@
       <!-- content -->
       <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 mt-6 md:mt-9 lg:mt-12">
             <!-- image 1 -->
-        <div class="bg-[url('/images/2.png')] bg-cover rounded-xl lg:rounded-2xl h-[15.25rem] lg:h-[21.125rem] bg-center flex flex-col items-start justify-center relative ">
+        <div class="bg-[url('./images/2.png')] bg-cover rounded-xl lg:rounded-2xl h-[15.25rem] lg:h-[21.125rem] bg-center flex flex-col items-start justify-center relative ">
           <div class="pl-6 lg:pl-0 lg:absolute lg:left-10 lg:bottom-10">
 
             <h3 class="text-white font-extrabold text-xl lg:text-2xl mb-3 lg:mb-4">Junior Program</h3>
@@ -186,7 +186,7 @@
           </div>
         </div>
           <!-- image 02 -->
-        <div class="bg-[url('/images/3.png')] bg-cover rounded-xl lg:rounded-2xl h-[15.25rem] lg:h-[21.125rem] bg-center flex flex-col items-start justify-center relative ">
+        <div class="bg-[url('./images/3.png')] bg-cover rounded-xl lg:rounded-2xl h-[15.25rem] lg:h-[21.125rem] bg-center flex flex-col items-start justify-center relative ">
           <div class="pl-6 lg:pl-0 lg:absolute lg:left-10 lg:bottom-10">
 
             <h3 class="text-white font-extrabold text-xl lg:text-2xl mb-3 lg:mb-4">Teenager Program</h3>
@@ -202,7 +202,7 @@
           </div>
         </div>
           <!-- image 03 -->
-        <div class="bg-[url('/images/4.png')] lg:col-span-2 bg-cover rounded-xl lg:rounded-2xl h-[15.25rem] lg:h-[28.125rem] bg-center flex flex-col items-start justify-center relative ">
+        <div class="bg-[url('./images/4.png')] lg:col-span-2 bg-cover rounded-xl lg:rounded-2xl h-[15.25rem] lg:h-[28.125rem] bg-center flex flex-col items-start justify-center relative ">
           <div class="pl-6 lg:pl-0 lg:absolute lg:left-10 lg:bottom-10">
 
             <h3 class="text-white font-extrabold text-xl lg:text-2xl mb-3 lg:mb-4">Professional Program</h3>
@@ -234,7 +234,7 @@
           <!-- card 01 -->
         <div class="shadow-xl flex flex-col lg:flex-row gap-5 p-6 rounded-2xl">
           <figure class="w-full lg:w-5/12 flex justify-center items-center ">
-            <img src="/images/5.png" alt="jackets" class="rounded-xl w-full lg:w-9/12" />
+            <img src="./images/5.png" alt="jackets" class="rounded-xl w-full lg:w-9/12" />
           </figure>
           <div class="w-full lg:w-7/12 flex flex-col items-start space-y-3">
             <!-- card icon -->
@@ -268,7 +268,7 @@
         <!-- card 02 -->
         <div class="bg-base-100 shadow-xl flex flex-col lg:flex-row gap-5 p-6 rounded-2xl">
           <figure class="">
-            <img src="/images/6.png" alt="jackets" class="rounded-xl" />
+            <img src="./images/6.png" alt="jackets" class="rounded-xl" />
           </figure>
           <div class="flex flex-col items-start space-y-3">
             <!-- card icon -->
@@ -302,7 +302,7 @@
         <!-- card 03 -->
         <div class="bg-base-100 shadow-xl flex flex-col lg:flex-row gap-5 p-6 rounded-2xl">
           <figure class="">
-            <img src="/images/7.png" alt="jackets" class="rounded-xl" />
+            <img src="./images/7.png" alt="jackets" class="rounded-xl" />
           </figure>
           <div class="flex flex-col items-start space-y-3">
             <!-- card icon -->
@@ -336,7 +336,7 @@
         <!-- card 04 -->
         <div class="bg-base-100 shadow-xl flex flex-col lg:flex-row gap-5 p-6 rounded-2xl">
           <figure class="">
-            <img src="/images/8.png" alt="jackets" class="rounded-xl" />
+            <img src="./images/8.png" alt="jackets" class="rounded-xl" />
           </figure>
           <div class="flex flex-col items-start space-y-3">
             <!-- card icon -->
@@ -370,7 +370,7 @@
         <!-- card 05 -->
         <div class="bg-base-100 shadow-xl flex flex-col lg:flex-row gap-5 p-6 rounded-2xl">
           <figure class="">
-            <img src="/images/9.png" alt="jackets" class="rounded-xl" />
+            <img src="./images/9.png" alt="jackets" class="rounded-xl" />
           </figure>
           <div class="flex flex-col items-start space-y-3">
             <!-- card icon -->
@@ -404,7 +404,7 @@
         <!-- card 06 -->
         <div class="bg-base-100 shadow-xl flex flex-col lg:flex-row gap-5 p-6 rounded-2xl">
           <figure class="">
-            <img src="/images/10.png" alt="jackets" class="rounded-xl" />
+            <img src="./images/10.png" alt="jackets" class="rounded-xl" />
           </figure>
           <div class="flex flex-col items-start space-y-3">
             <!-- card icon -->
